--- a/Dashboard/Views/Shared/Externalhtml/_modals.cshtml
+++ b/Dashboard/Views/Shared/Externalhtml/_modals.cshtml
@@ -49,16 +49,16 @@
     </div>
 </div>
 
-<div class="modal fade text-start modal-success" id="success" tabindex="-1" aria-labelledby="success" aria-hidden="true">
+<div class="modal fade text-start modal-success text-center" id="success" tabindex="-1" aria-labelledby="success" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content">
-            <div class="modal-header">
+            <div class="modal-header text-center">
                 <h5 class="modal-title" id="myModalLabel110">@Localizer.Get("Success") </h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
                 <div class="alert alert-success" role="alert">
-                    <div class="alert-body">
+                    <div class="alert-body text-center">
                         @Localizer.Get("Well Done!")
                     </div>
                 </div>
