--- a/Dashboard/Views/Shared/_scripts.cshtml
+++ b/Dashboard/Views/Shared/_scripts.cshtml
@@ -124,10 +124,10 @@
     <script src="~/assets/js/forms/form-repeater/form-repeater.js"></script>
 }
 
-@if (ViewBag.useCharts != null && ViewBag.useCharts)
+@*@if (ViewBag.useCharts != null && ViewBag.useCharts)
 {
     <script src="~/assets/js/charts/apexcharts.js"></script>
-}
+}*@
 
 @if (ViewBag.useImageUploud != null && ViewBag.useImageUploud)
 {
