--- a/Dashboard/Areas/Dashboard/Views/Home/Index.cshtml
+++ b/Dashboard/Areas/Dashboard/Views/Home/Index.cshtml
@@ -38,6 +38,13 @@
 
                             <a id="UpdateStandings" class="btn btn-primary"> @Localizer.Get("Update Standings") </a>
                             <a id="UpdateGames" class="btn btn-primary"> @Localizer.Get("Update Games") </a>
+                            
+                            @* Start Updating Modals *@
+                            <a class="btn btn-primary update_game_result"> @Localizer.Get("UpdateGameResult") </a>
+                            <a class="btn btn-primary update_account_team_game_weak_ranking"> @Localizer.Get("UpdateAccountTeamGameWeakRanking") </a>
+                            <a class="btn btn-primary update_private_league_ranking"> @Localizer.Get("UpdatePrivateLeagueRanking") </a>
+                            <a class="btn btn-primary update_account_team_points"> @Localizer.Get("UpdateAccountTeamPoints") </a>
+                            @* End Updating Modals *@
 
                             <section id="ajax-charts">
                                 <div class="row">
@@ -109,6 +116,9 @@
         </div>
     </div>
 </div>
+
+<partial name="../Home/_HomeModals" view-data="ViewData" />
+
 <!-- END: Content-->
 @section scripts {
     <script src="~/apis/charts.js"></script>
@@ -143,6 +153,105 @@
              });
         });
 
+            // Start Updating Modals
+            
+            // start update_game_result
+            $(document).on("click", ".update_game_result", function(e) {
+              e.preventDefault();
+              
+              $(".update_game_result_modal").modal('show');
+            });
+            
+            $(document).on("click", ".update_game_result_submit", function (e) {
+                let fk_GameWeak = $("select[name=Fk_GameWeak]").val();
+                let _365_MatchId = $("input[name=_365_MatchId]").val();
+                let runBonus = $("select[name=RunBonus]").val();
+                
+                $.ajax({
+                    url: '@Url.ActionLink("UpdateGameResult", "Home", new {area = "Dashboard"})',
+                    method: 'post',
+                    data: {
+                      fk_GameWeak: fk_GameWeak,
+                      _365_MatchId: _365_MatchId,
+                      runBonus: runBonus
+                    },
+                    success: function(data) {
+                      $("#success").modal('show');
+                    }
+                }); 
+            });
+            // end update_game_result
+            
+            // start update_account_team_game_weak_ranking
+            $(document).on("click", ".update_account_team_game_weak_ranking", function(e) {
+              e.preventDefault();
+              
+              $(".update_account_team_game_weak_ranking_modal").modal('show');
+            });
+            
+            $(document).on("click", ".update_account_team_game_weak_ranking_submit", function (e) {
+                let fk_GameWeak = $("select[name=Fk_GameWeak]").val();
+                
+                $.ajax({
+                    url: '@Url.ActionLink("UpdateAccountTeamGameWeakRanking", "Home", new {area = "Dashboard"})',
+                    method: 'post',
+                    data: {
+                      fk_GameWeak: fk_GameWeak,
+                    },
+                    success: function(data) {
+                      $("#success").modal('show');
+                    }
+                }); 
+            });
+            // end update_account_team_game_weak_ranking
+            
+            // start update_private_league_ranking
+            $(document).on("click", ".update_private_league_ranking", function(e) {
+              e.preventDefault();
+              
+              $(".update_private_league_ranking_modal").modal('show');
+            });
+            
+            $(document).on("click", ".update_private_league_ranking_submit", function (e) {
+                let fk_GameWeak = $("select[name=Fk_GameWeak]").val();
+                
+                $.ajax({
+                    url: '@Url.ActionLink("UpdatePrivateLeagueRanking", "Home", new {area = "Dashboard"})',
+                    method: 'post',
+                    data: {
+                      fk_GameWeak: fk_GameWeak,
+                    },
+                    success: function(data) {
+                      $("#success").modal('show');
+                    }
+                }); 
+            });
+            // end update_private_league_ranking
+            
+            // start update_account_team_points
+            $(document).on("click", ".update_account_team_points", function(e) {
+              e.preventDefault();
+              
+              $(".update_account_team_points_modal").modal('show');
+            });
+            
+            $(document).on("click", ".update_account_team_points_submit", function (e) {
+                let fk_GameWeak = $("select[name=Fk_GameWeak]").val();
+                
+                $.ajax({
+                    url: '@Url.ActionLink("UpdateAccountTeamPoints", "Home", new {area = "Dashboard"})',
+                    method: 'post',
+                    data: {
+                      fk_GameWeak: fk_GameWeak,
+                    },
+                    success: function(data) {
+                      $("#success").modal('show');
+                    }
+                }); 
+            });
+            // end update_account_team_points
+            
+            // End Updating Modals
         });
     </script>
 }
